# robotics-escape-room

./: .gitignore  CLAUDE.md  Commands.md  README.md  architecture.md  escape_room_pipeline.md  flake.nix  ideas.md  pixi-toolchain.cmake  pixi.toml  presentation_script.md  run.sh
project/: .gitignore  .gitmodules  README.md  pixi.toml
project/docs/: setup-fix.md  setup-from-scratch.md
project/src/robomaster_example/: LICENSE  package.xml
project/src/robomaster_example/launch/: ep_tof.launch
project/src/robomaster_example/models/: ros2Interface helper tool + clock.ttm
project/src/robomaster_example/scenes/: robomaster-room-scene.ttt
project/src/robomaster_ros/robomaster_description/: CMakeLists.txt
project/src/robomaster_ros/robomaster_msgs/: CMakeLists.txt
project/src/robot/: package.xml  setup.py
project/src/simExtROS2/: CMakeLists.txt  package.xml
project/src/simExtROS2/templates/: pub_new.cpp
src/escape_room/: package.xml  setup.cfg  setup.py
src/escape_room/config/: escape_room.rviz  nav2_params.yaml  slam_toolbox_params.yaml
src/escape_room/escape_room/exploration/: __init__.py  frontier.py
src/escape_room/escape_room/mapping/: __init__.py  occupancy_grid.py  pointcloud_utils.py
src/escape_room/escape_room/nodes/: color_detector_node.py  door_controller.py  explorer_node.py  lidar_node.py  mapper_node.py
src/escape_room/escape_room/nodes/explorer/: door.py  drop.py  exit_drive.py  explore.py  frontier.py  gripper.py  gripper_io.py  gripper_phase.py  nav_client.py  params.py  phases.py  pickup.py  pose.py  sim.py  sim_setup.py  state.py  utils.py
src/escape_room/escape_room/planning/: __init__.py  astar.py  pure_pursuit.py
src/escape_room/launch/: discovery.launch.py
src/escape_room/scenarios/: easy.json  medium.json
src/escape_room/scripts/: build_scene.py  debug_gripper.py  gripper_helpers.lua  lidar_sensor.lua  measure_gripper.py
src/robomaster_example/: setup.cfg  setup.py
src/robomaster_example/launch/: controller.launch
src/robomaster_example/robomaster_example/: controller_node.py
src/robomaster_sim/examples/: camera.py  chassis.py  client.py  discover.py  led.py  move.py  showoff_ep.py  showoff_s1.py  tof.py
src/simExtROS2/: simROS2.lua
src/simExtROS2/examples/: tf.ttt
src/simExtROS2/meta/: callbacks.xml  interfaces.txt
src/simExtROS2/src/: ros_msg_builtin_io.cpp  sim_ros2_interface.cpp
